--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <div class="dropdown">
             <a href="#">Our Acts</a>
             <div class="dropdown-content">
-                <a href="#" class="hoverednav">Act 2, Scene 1</a>
-                <a href="#" class="hoverednav">Act 2, Scene 2</a>
+                <a href="act2scene1.html" class="hoverednav">Act 2, Scene 1</a>
+                <a href="act2scene2.html" class="hoverednav">Act 2, Scene 2</a>
                 <a href="#" class="hoverednav">Act 2, Scene 3</a>
                 <a href="#" class="hoverednav">Act 2, Scene 4</a>
                 <a href="#" class="hoverednav">Act 2, Scene 5</a>
