add a2s6 as a page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <a href="#" class="hoverednav">Act 2, Scene 3</a>
                 <a href="#" class="hoverednav">Act 2, Scene 4</a>
                 <a href="#" class="hoverednav">Act 2, Scene 5</a>
-                <a href="#" class="hoverednav">Act 2, Scene 6 </a>
+                <a href="act2scene6.html" class="hoverednav">Act 2, Scene 6 </a>
             </div>
         </div>
         
