format, make some minor changes

--- a/act2scene3.html
+++ b/act2scene3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,11 +23,13 @@
         }
     </style>
 </head>
+
 <body>
     <div class="text-container">
         <h1>Rizz-eo and Rizz-iet: Minecraft Let's Play - Act 2, Scene 2</h1>
         <p class="formatted-text">
-            This is an example of formatted text. You can customize the styles in the CSS section to meet your preferences.
+            This is an example of formatted text. You can customize the styles in the CSS section to meet your
+            preferences.
         </p>
         <p class="formatted-text">
             Enter <strong>Rizz-eo</strong> while crouching<br>
@@ -149,9 +152,10 @@
             I’ll make sure to be on my keyboard <br>
             Sleep tight and make those eyes shut tight <br>
             <br>
-            [<strong>Rizz-iet</strong> and <strong>Rizz-eo</strong> leave the scene] 
-            
+            [<strong>Rizz-iet</strong> and <strong>Rizz-eo</strong> leave the scene]
+
         </p>
     </div>
 </body>
+
 </html>
