--- a/profiles.html
+++ b/profiles.html
@@ -88,8 +88,19 @@
             <a href="profiles.html">Character Profiles / Descriptions</a>
         </div>
     </nav>
+    <div class="text-container">
+        <h1>Character Profiles - Character Descriptions (Act 2)</h1>
+        <p>Here are the character profiles and descriptions for the characters in the play Rizz-eo and Rizz-iet.</p>
 
-    <h1>Rizz-eo and Rizz-iet Project</h1>
+        <h2>Rizz-eo</h2>
+        <h2>Rizz-iet</h2>
+        <h2>Rizz-ia</h2>
+        <h2>Nerdcutio</h2>
+        <h2>Benny</h2>
+        <h2>Peter</h2>
+        <h2>Rizzeo</h2>
+    </div>
+
 </body>
 
 </html>
