--- a/profiles.html
+++ b/profiles.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Romeo and Juliet Project</title>
     <style>
+        .text-container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .formatted-text {
+            line-height: 1.6;
+            font-size: 16px;
+            color: #333;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -90,15 +101,49 @@
     </nav>
     <div class="text-container">
         <h1>Character Profiles - Character Descriptions (Act 2)</h1>
-        <p>Here are the character profiles and descriptions for the characters in the play Rizz-eo and Rizz-iet.</p>
+        <p>Here are the character profiles and descriptions for the characters in the play Rizz-eo and Rizz-iet. <b>(IN
+                ACT 2)</b></p>
 
         <h2>Rizz-eo</h2>
+        <p><strong>Name: Rizz-Eo</strong></p>
+        <p>Chronically online depressed kid, who wishes to have a girlfriend. He speaks in social media slang.</p>
+        <p>Characteristics:</p>
+        <li>Chronically online, so he speaks weirdly</li>
+        <li>Weird kid</li>
+        <li> Son of Montague Inc</li>
+        <li> Depressed, until he meets Rizziet</li>
+        <li> Becomes more rizzy when he meets Rizziet</li>
+        <li> Wants Rizziet to be with him</li>
+
         <h2>Rizz-iet</h2>
+        <p><strong>Name: Rizz-iet</strong></p>
+        <p>A sassy, pick me girl who talks in a sassy way. Represents the theme of love very well</p>
+        <p>Characteristics (summarized):</p>
+        <li> Sassy</li>
+        <li> Cute as can be</li>
+        <li> Pick-me girl</li>
+        <li> Daughter of Capulet co.</li>
+
         <h2>Rizz-ia</h2>
+        <p><strong>Name: Rizz-ia</strong></p>
+        <p>Originally the "Nurse" to Juliet, now she is a bestie of Rizz-iet; she cares about her a lot. </p>
+
         <h2>Nerdcutio</h2>
+        <p><strong>Name: Nerdcutio</strong></p>
+        <p>He is a annoying nerd character, he uses long and big words to describe simple things and thinks he is better
+            than everyone else.</p>
+
         <h2>Benny</h2>
+        <p><strong>Name: Benny</strong></p>
+        <p>A normal person in today’s standard, which will comedically contrast with our characters.</p>
+
         <h2>Peter</h2>
-        <h2>Rizzeo</h2>
+        <p><strong>Name: Peter</strong></p>
+        <p>A servant of Rizz-ia. Helps give advice. He's like a mentor for Rizz-ia. She asks question to him, he answers.</p>
+
+        <h2>Friar</h2>
+        <p><strong>Name: Friar</strong></p>
+        <p>A wanna be cool person. He talks in a gansta way and in a way can be seen as someone who is illegal.</p>
     </div>
 
 </body>
