--- a/craft.html
+++ b/craft.html
@@ -104,8 +104,8 @@
         </div>
     </nav>
     <div class="text-container">
-        <h1>Character Profiles - Character Descriptions (Act 2)</h1>
-        <p>Here are the character profiles and descriptions for the characters in the play Rizz-eo and Rizz-iet. <b>(IN
+        <h1>Craft moves (Act 2)</h1>
+        <p>Here are the <b>craft moves</b> of ACT 2 seen in Rizz-eo and Rizz-iet. <b>(IN
                 ACT 2)</b></p>
 
         <h2>Rizz-eo</h2>
