--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
         <div class="dropdown">
             <a href="profiles.html">Character Profiles / Descriptions</a>
         </div>
+
+        <div class="dropdown">
+            <a href="craft.html">Craft Moves</a>
+        </div>
     </nav>
 
     <h1>Rizz-eo and Rizz-iet Project</h1>
